tests/cmp/dc-label-wrong-brackets.trp
let val x = 50 raisedTo <alice; bob>
in printWithLabels x
end